<resources>
    <string name="app_name">KEPHIS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KOSKEI K HOSEAH</string>
    <string name="nav_header_subtitle">koskeihoseah@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Our Services</string>
    <string name="menu_slideshow">About Us</string>
    <string name="home_second">Home Second</string>
    <string name="logout">Logout</string>
    <string name="our_Services">Our Services</string>
    <string name="remaks">Remarks</string>
    <string name="url">http://172.105.90.155:8080</string>
    <string name="baseUsername">qa.brisk@briskbusiness.co.ke</string>
    <string name="basePassword">abc123</string>
    <string name="name_of_the_applicant">"Name: "</string>
    <string name="license_no">Licence No:</string>
    <string name="document_date">Document Date:</string>
    <string name="document_no">Document No:</string>
    <string name="error">Check Internet Connection</string>
    <string name="select">Please Select Inspection To Continue!</string>
    <string name="inalidup">Invalid username or password!!!</string>
    <string name="toilets_and_dressing_rooms_in_good_repair_clean_properly_ventilated_and_adequately_separated_from_storage_areas">Toilets and dressing rooms in good repair, clean, properly ventilated, and adequately separated from storage areas</string>
    <string name="presence_of_personal_protection_gears">Presence of Personal protection gears</string>
    <string name="date_and_time_of_inspection">Date and Time of Inspection</string>
    <string name="save">Save</string>
    <string-array name="users_arrays">
        <item>Select Inspector</item>
    </string-array>
    <string name="title_activity_kephis_dasboard">KephisDasboard</string>
    <string name="action_settings">Settings</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="title_activity_test_dashboard">TestDashboard</string>
    <string name="Inspector_name">Inspector Name</string>
    <string name="next">Next</string>
    <string name="general">General</string>
    <string name="consignment_inspection_report">Consignment Inspection Report</string>
    <string name="upload_file">upload File</string>
    <string name="additional_inspections">Additional Inspections</string>
    <string name="additional_inspection_remarks">Additional Inspection Remarks</string>
    <string name="products">Products</string>
    <string name="net_weight">Net Weight</string>
    <string name="gross_weightt">Gross Weightt</string>
    <string name="product_category">Product Category</string>
    <string name="commodity_form">Commodity Form</string>
    <string name="variety">Variety</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_unit">Quantity Unit</string>
    <string name="quantiy_passed">Quantiy Passed</string>
    <string name="quantity_rejected">Quantity Rejected</string>
    <string name="no_of_packages">No. of Packages</string>
    <string name="rejected_packages">Rejected Packages</string>
    <string name="variety_details">Variety Details</string>
    <string name="damage_caused">Damage Caused</string>
    <string name="plant_part">Plant Part</string>
    <string name="sample_size_inspected">Sample Size Inspected</string>
    <string name="type_of_disease">Type of Disease</string>
    <string name="pathogen_identified">Pathogen Identified</string>
    <string name="health_clean">Health (Clean)</string>
    <string name="treatment">Treatment</string>
    <string name="released">Released</string>
    <string name="method_of_destruction">Method of Destruction</string>
    <string name="serial_number">Serial Number</string>
    <string name="relevant_information">Relevant Information</string>
    <string name="submit">Submit</string>
    <string name="person_in_charge">Person In Charge</string>
    <string name="commodity">Commodity</string>
    <string name="capacity_dimensions_in_feet_meters">Capacity/Dimensions in feet/meters</string>
    <string name="pest_monitoring">Pest Monitoring</string>
    <string name="produce_is_examined_visually_prior_to_storage">Produce is examined visually prior to storage</string>
    <string name="evidence_of_storage_pest_activity_in_processing_facility">Evidence of storage pest activity in processing facility</string>
    <string name="rodent_and_pest_control_measures_for_processing_storage_facility_in_place">Rodent and pest control measures for processing/storage facility in place</string>
    <string name="equipment_for_trapping_pests_and_rodents_in_place">Equipment for trapping pests and rodents in place</string>
    <string name="management_employees_have_knowledge_on_storage_pests">Management/employees have knowledge on storage pests</string>
    <string name="storage_conditions">Storage Conditions</string>
    <string name="processing_and_storage_area_are_damp_proof">Processing and storage area are damp proof</string>
    <string name="finished_goods_in_bags_containers_are_placed_on_wooden">Finished goods in bags/containers are placed on wooden</string>
    <string name="crates_pallets_tarpaulin_at_time_of_stacking">Crates/Pallets/Tarpaulin at time of stacking</string>
    <string name="rejected_goods_are_kept_separately_from_finished_produce">Rejected goods are kept separately from finished produce</string>
    <string name="processing_facility_is_free_from_spillage_trash_water_ponding">Processing facility is free from spillage, trash, water ponding</string>
    <string name="different_commodities_are_stored_separately">Different commodities are stored separately</string>
    <string name="currently_stored_produce_is_free_of_visible_food_contamination">Currently stored produce is free of visible food contamination</string>
    <string name="structural_conditions">Structural Conditions</string>
    <string name="provision_of_wire_plastic_mesh_net_on_openings_to_prevent_entry_of_pests_rodents_and_birds">Provision of wire/plastic mesh/net on openings to prevent entry of pests, rodents and birds</string>
    <string name="building_is_durable_easily_cleanable_and_has_nonabsorbent_floors_and_walls">Building is durable, easily cleanable and has nonabsorbent floors and walls</string>
    <string name="interior_lighting_is_sufficient_to_allow_inspection_and_cleaning">Interior lighting is sufficient to allow inspection and cleaning</string>
    <string name="ventilations_are_adequate">Ventilations are adequate</string>
    <string name="toilets_and_dressing_rooms">Toilets and Dressing Rooms</string>
    <string name="overall_assessment">Overall Assessment</string>
    <string name="farm_management_involvement_in_pest_control">Farm management involvement in pest control</string>
    <string name="pest_management_system">Pest management system</string>
    <string name="pack_house_quality_management_system">Pack house quality management system</string>
    <string name="traceability_system">Traceability system</string>
    <string name="recommendation">Recommendation</string>
    <string name="farm_details">FARM DETAILS</string>
    <string name="farm_name">Farm Name</string>
    <string name="traceability_code">Traceability Code</string>
    <string name="county">County</string>
    <string name="sub_county">Sub County</string>
    <string name="ward">Ward</string>
    <string name="contact_person">Contact Person</string>
    <string name="area_under_production_ha">Area under production (Ha)</string>
    <string name="market_destination">Market destination</string>
    <string name="aware_of_market_requirements">Aware Of Market Requirements</string>
    <string name="acreage">Acreage</string>
    <string name="source_of_planting_material">Source of planting material</string>
    <string name="presence_of_quality_assurance_systems_at_farm_level">Presence of quality assurance systems at farm level</string>
    <string name="documented_pest_management_protocol_or_procedures_in_place">Documented pest management protocol or procedures in place</string>
    <string name="number_of_scouts_on_the_farm">Number of scouts on the farm</string>
    <string name="training_and_or_experience_of_scout_s_in_pest_identification">Training and/or experience of scout/s in pest identification</string>
    <string name="area_allocated_to_each_scout_per_day_and_or_per_week">Area allocated to each scout per day and/or per week</string>
    <string name="pest_monitoring_methods_used">Pest monitoring methods used</string>
    <string name="scouting_methods_used">Scouting methods used</string>
    <string name="frequency_of_scouting_per_farm_greenhouse_or_block">Frequency of scouting per farm, greenhouse or block</string>
    <string name="scouting_records_available">Scouting records available</string>
    <string name="pest_reporting_channels">Pest reporting channels</string>
    <string name="pest_control_methods_used">Pest control methods used</string>
    <string name="spray_programs_in_place">Spray programs in place</string>
    <string name="pack_house_quality_control">Pack House Quality Control</string>
    <string name="quality_control_checks_in_place">Quality control checks in place</string>
    <string name="awareness_on_pests_of_concern">awareness on pests of concern</string>
    <string name="ability_of_quality_control_personnel_to_detect_pests_signs">Ability of quality control personnel to detect pests signs</string>
    <string name="detected_pest_records_in_place">Detected pest records in place</string>
    <string name="general_farm_practices_scouts">General Farm Practices - Scouts</string>
    <string name="training_and_or_experience">Training and/or experience</string>
    <string name="ability_to_identify_pests_of_concern">Ability to identify pests of concern</string>
    <string name="area_scouted_per_day">Area scouted per day</string>
    <string name="frequency_of_scouting_greenhouse_block_farm_per_week">Frequency of scouting greenhouse/block/farm per week</string>
    <string name="scouting_has_scouting_sheets_or_book">Scouting has scouting sheets or book</string>
    <string name="scouting_tools_used">Scouting tools used</string>
    <string name="pests_of_concern_captured_in_records">Pests of concern captured in records</string>
    <string name="scouting_reporting_channels">Scouting reporting channels</string>
    <string name="random_inspection">Random Inspection</string>
    <string name="any_pests_or_pest_signs_detected">Any pests or pest signs detected</string>
    <string name="pest_traps_in_place">Pest traps in place</string>
    <string name="any_pests_of_concern_trapped">Any pests of concern trapped</string>
    <string name="greenhouse_farm_sanitary_status">Greenhouse/farm sanitary status</string>
    <string name="pack_house_practices">Pack House Practices</string>
    <string name="pack_house_sanitation_status">Pack house sanitation status</string>
    <string name="quality_management_procedures_in_place">Quality management procedures in place</string>
    <string name="how_many_quality_control_points">How many quality control points</string>
    <string name="quality_control_personnel_on_awareness_on_pests_of_concern">Quality control personnel on awareness on pests of concern</string>
    <string name="ability_to_detect_pests_and_pest_signs">Ability to detect pests and pest signs</string>
    <string name="reporting_channel_for_pest_detection">Reporting channel for pest detection</string>
    <string name="graders_aware_of_pests_and_pest_signs">Graders aware of pests and pest signs</string>
    <string name="section_unit">Section/Unit</string>
</resources>