<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    android:padding="@dimen/margin_normal"
    tools:context=".ui.Views.Activities.ExportActivities.Export_Farm_inspection_Step2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/general"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/section_unit"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/etsectionunit"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/consignment_inspection_report"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etConsignmentReport"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:hint="@string/upload_file"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/etAdditionalInspections"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords"
                    android:text="@string/additional_inspections" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/additional_inspection_remarks"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/etAdditionalInspectionRemarks"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btnnext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_design"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="@dimen/btn_txt_size" />


    </LinearLayout>
</ScrollView>