<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    android:padding="@dimen/margin_normal"
    tools:context=".ui.Views.Activities.ExportActivities.Export_Farm_inspection_Step3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pack_house_practices"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="normal" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pack_house_sanitation_status"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etPackhousesanitationstatus"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/quality_management_procedures_in_place"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/etQualitymanagementproceduresinplace"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/how_many_quality_control_points"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/etHowmanyqualitycontrolpoints"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/quality_control_personnel_on_awareness_on_pests_of_concern"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/etQualitycontrolpersonnelonawareness"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ability_to_detect_pests_and_pest_signs"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/etAbilitytodetectpestsandpestsigns"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reporting_channel_for_pest_detection"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/etReportingchannelforpestdetection"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/graders_aware_of_pests_and_pest_signs"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/etGradersawareofpestsandpestsigns"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnnext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_design"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="@dimen/btn_txt_size" />

    </LinearLayout>
</ScrollView>