<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    android:padding="@dimen/margin_normal"
    tools:context=".ui.Views.Activities.ExportActivities.Export_Farm_inspection_Step3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/overall_assessment"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/farm_management_involvement_in_pest_control"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etFarmmanagementinvolvementpestcontrol"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pest_management_system"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/etPestmanagementsystem"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pack_house_quality_management_system"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/etPackhousequalitymanagementsystem"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/traceability_system"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/etTraceabilitysystem"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/recommendation"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etRecommendation"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_box_height"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnsave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_design"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="@dimen/btn_txt_size" />

    </LinearLayout>
</ScrollView>